@@ -1,5 +1,6 @@
 - urpmi
   o in --auto, do display an error message when rpms are missing
+  o revert --auto-update behaviour in case of media update failures (#45417)
 
 Version 6.18 - 28 October 2008
 
